--- a/.github/workflows/deb-release-arm.yml
+++ b/.github/workflows/deb-release-arm.yml
@@ -35,17 +35,16 @@ jobs:
         with:
           arch: ${{ matrix.arch }}
           distro: ${{ matrix.distro }}
-          env: |
-            GO_VERSION=${{ env.GO_VERSION }}
-            USE_BROTLI=${{ env.USE_BROTLI }}
-            USE_LIBSODIUM=${{ env.USE_LIBSODIUM }}
-            USE_LZO=${{ env.USE_LZO }}
+          env:
+            GO_VERSION: ${{ env.GO_VERSION }}
+            USE_BROTLI: ${{ env.USE_BROTLI }}
+            USE_LIBSODIUM: ${{ env.USE_LIBSODIUM }}
+            USE_LZO: ${{ env.USE_LZO }}
           shell: /bin/bash
           run: |
             # Устанавливаем зависимости внутри ARM64-контейнера
             apt-get update
-            apt-get install -y build-essential curl git cmake liblzo2-dev brotli libsodium-dev \
-                               devscripts debhelper dh-make dpkg-dev
+            apt-get install -y build-essential curl git cmake liblzo2-dev brotli libsodium-dev devscripts debhelper dh-make dpkg-dev
 
             # Устанавливаем Go вручную (setup-go не работает в эмуляции)
             curl -LO https://go.dev/dl/go${GO_VERSION}.linux-arm64.tar.gz
