--- a/.github/workflows/deb-release-arm.yml
+++ b/.github/workflows/deb-release-arm.yml
@@ -35,18 +35,17 @@ jobs:
         with:
           arch: ${{ matrix.arch }}
           distro: ${{ matrix.distro }}
-          env:
-            GO_VERSION: ${{ env.GO_VERSION }}
-            USE_BROTLI: ${{ env.USE_BROTLI }}
-            USE_LIBSODIUM: ${{ env.USE_LIBSODIUM }}
-            USE_LZO: ${{ env.USE_LZO }}
+          env: |
+            GO_VERSION=${{ env.GO_VERSION }}
+            USE_BROTLI=${{ env.USE_BROTLI }}
+            USE_LIBSODIUM=${{ env.USE_LIBSODIUM }}
+            USE_LZO=${{ env.USE_LZO }}
           shell: /bin/bash
           run: |
-            # Устанавливаем зависимости внутри ARM64-контейнера
             apt-get update
-            apt-get install -y build-essential curl git cmake liblzo2-dev brotli libsodium-dev devscripts debhelper dh-make dpkg-dev
+            apt-get install -y build-essential curl git cmake liblzo2-dev brotli libsodium-dev \
+                               devscripts debhelper dh-make dpkg-dev
 
-            # Устанавливаем Go вручную (setup-go не работает в эмуляции)
             curl -LO https://go.dev/dl/go${GO_VERSION}.linux-arm64.tar.gz
             tar -C /usr/local -xzf go${GO_VERSION}.linux-arm64.tar.gz
             export GOROOT=/usr/local/go
@@ -63,7 +62,6 @@ jobs:
             make pg_build
             mv main/pg/wal-g wal-g-arm64
 
-            # Создание DEB пакета (в контейнере!)
             mkdir -p wal-g-deb/DEBIAN
             mkdir -p wal-g-deb/usr/bin/
             cp wal-g-arm64 wal-g-deb/usr/bin/wal-g
@@ -79,10 +77,9 @@ jobs:
             EOF
             dpkg-deb --build wal-g-deb wal-g_${GITHUB_REF#refs/tags/v}_arm64.deb
 
-            # Перемещаем deb-файл на хост-машину для следующих шагов
+            mkdir -p /artifacts
             cp wal-g_${GITHUB_REF#refs/tags/v}_arm64.deb /artifacts/
 
-      # Загружаем файл из контейнера ARM64 на машину AMD64
       - name: Upload DEB package
         uses: actions/upload-artifact@v4
         with:
@@ -98,7 +95,6 @@ jobs:
           cd repo-pages
           git pull --rebase
 
-          # Копируем deb-пакет из артефактов в репозиторий
           mkdir -p dists/stable/main/binary-arm64
           cp ../artifacts/wal-g_${GITHUB_REF#refs/tags/v}_arm64.deb dists/stable/main/binary-arm64/
 
