--- a/.github/workflows/deb-release-arm.yml
+++ b/.github/workflows/deb-release-arm.yml
@@ -52,7 +52,8 @@ jobs:
 
             git config --global --add safe.directory /home/runner/work/wal-g/wal-g
             git config --global --add safe.directory /home/runner/work/wal-g/wal-g/submodules/brotli
-
+            git config --global --add safe.directory /home/runner/work/walg_test/walg_test
+            
             make deps
             make pg_build
             mv main/pg/wal-g wal-g-arm64
