--- a/.github/workflows/deb-release-arm.yml
+++ b/.github/workflows/deb-release-arm.yml
@@ -53,7 +53,8 @@ jobs:
             git config --global --add safe.directory /home/runner/work/wal-g/wal-g
             git config --global --add safe.directory /home/runner/work/wal-g/wal-g/submodules/brotli
             git config --global --add safe.directory /home/runner/work/walg_test/walg_test
-            
+            git config --global --add safe.directory /home/runner/work/walg_test/walg_test/submodules/brotli
+
             make deps
             make pg_build
             mv main/pg/wal-g wal-g-arm64
