--- a/.github/workflows/deb-release-amd2.yml
+++ b/.github/workflows/deb-release-amd2.yml
@@ -113,9 +113,9 @@ jobs:
           echo "wal-g usr/bin/" > debian/install
 
       # 9. Debug: Check detected Go module path
-      - name: Debug - Show detected Go module path
-        run: echo "Using DH_GOPKG=\"${{ env.DH_GOPKG }}\""
-
+      - name: Debug - Show debian/rules
+        run: cat -A debian/rules
+        
       # 10. Debug: Check Go files
       - name: Debug - List Go source files
         run: find . -name "*.go"
