--- a/MY/deb-release-amd.yml
+++ b/MY/deb-release-amd.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential \
-                                  apt-utils brotli libsodium-dev liblzo2-dev
+          sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential apt-utils liblzo2-dev brotli libsodium-dev
 
       # 4. make deps (если нужно подтянуть go-модули и т.п.)
       - name: Make deps
