--- a/.github/workflows/deb-release-amd22.yml
+++ b/.github/workflows/deb-release-amd22.yml
@@ -37,10 +37,15 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
-          
+
       # 4. make deps (если нужно подтянуть go-модули и т.п.)
       - name: Make deps
-        run: make deps
+        run: |
+          git config --global --add safe.directory /home/runner/work/wal-g/wal-g
+          git config --global --add safe.directory /home/runner/work/wal-g/wal-g/submodules/brotli
+          git config --global --add safe.directory /home/runner/work/walg_test/walg_test
+          git config --global --add safe.directory /home/runner/work/walg_test/walg_test/submodules/brotli
+          make deps
 
       # 5. Сборка WAL-G под `amd64`
       - name: Build WAL-G for AMD64
