--- a/aptftparchive.conf
+++ b/aptftparchive.conf
@@ -1,12 +1,14 @@
 Dir {
-  ArchiveDir "dists/stable";
+  ArchiveDir "dists";
 }
 
 APT::FTPArchive::Release {
   Origin "WAL-G Repo";
   Label "WAL-G APT Repository";
-  Suite "stable";
-  Codename "stable";
   Architectures "amd64 arm64";
   Components "main";
 }
+
+APT::FTPArchive::Release::Codename "focal";
+APT::FTPArchive::Release::Codename "jammy";
+APT::FTPArchive::Release::Codename "noble";
