--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -14,7 +14,7 @@ jobs:
   release-ubuntu:
     strategy:
       matrix:
-        os: [ ubuntu-24.04 ]
+        os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
         db: [ pg ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
