--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
         db: [ pg ]
+      max-parallel: 2
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -85,7 +86,11 @@ jobs:
 
           git clone --depth=1 --branch=gh-pages https://github.com/${{ github.repository }}.git repo-pages
           cd repo-pages
-          git pull --rebase
+          for attempt in {1..3}; do
+            git pull --rebase origin gh-pages && break
+            echo "Retrying git pull ($attempt/3)..."
+            sleep 3
+          done
 
           mkdir -p dists/$CODENAME/main/binary-amd64
           cp ../wal-g_${VERSION}.deb dists/$CODENAME/main/binary-amd64/
@@ -110,4 +115,8 @@ jobs:
           git add .
           git commit -m "Add WAL-G package ${VERSION} [amd64]"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          git push origin gh-pages
+          for attempt in {1..3}; do
+            git push origin gh-pages && break
+            echo "Retrying git push ($attempt/3)..."
+            sleep 3
+          done
