--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -86,10 +86,10 @@ jobs:
 
           git clone --depth=1 --branch=gh-pages https://github.com/${{ github.repository }}.git repo-pages
           cd repo-pages
-          for attempt in {1..3}; do
+          for attempt in {1..5}; do
             git pull --rebase origin gh-pages && break
             echo "Retrying git pull ($attempt/3)..."
-            sleep 3
+            sleep $(shuf -i 1-10 -n 1)
           done
 
           mkdir -p dists/$CODENAME/main/binary-amd64
@@ -99,12 +99,17 @@ jobs:
           Dir {
             ArchiveDir "dists";
           }
+
           APT::FTPArchive::Release {
             Origin "WAL-G Repo";
             Label "WAL-G APT Repository";
             Architectures "amd64 arm64";
             Components "main";
           }
+
+          APT::FTPArchive::Release::Codename "focal";
+          APT::FTPArchive::Release::Codename "jammy";
+          APT::FTPArchive::Release::Codename "noble";
           CONF
 
           apt-ftparchive -c ../aptftparchive.conf packages dists/$CODENAME/main/binary-amd64 > dists/$CODENAME/main/binary-amd64/Packages
@@ -115,8 +120,8 @@ jobs:
           git add .
           git commit -m "Add WAL-G package ${VERSION} [amd64]"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          for attempt in {1..3}; do
+          for attempt in {1..5}; do
             git push origin gh-pages && break
             echo "Retrying git push ($attempt/3)..."
-            sleep 3
+            sleep $(shuf -i 1-10 -n 1)
           done
