--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -95,26 +95,9 @@ jobs:
           mkdir -p dists/$CODENAME/main/binary-amd64
           cp ../wal-g_${VERSION}.deb dists/$CODENAME/main/binary-amd64/
 
-          cat <<CONF > ../aptftparchive.conf
-          Dir {
-            ArchiveDir "dists";
-          }
-
-          APT::FTPArchive::Release {
-            Origin "WAL-G Repo";
-            Label "WAL-G APT Repository";
-            Architectures "amd64 arm64";
-            Components "main";
-          }
-
-          APT::FTPArchive::Release::Codename "focal";
-          APT::FTPArchive::Release::Codename "jammy";
-          APT::FTPArchive::Release::Codename "noble";
-          CONF
-
-          apt-ftparchive -c ../aptftparchive.conf packages dists/$CODENAME/main/binary-amd64 > dists/$CODENAME/main/binary-amd64/Packages
+          apt-ftparchive -c .conf packages dists/$CODENAME/main/binary-amd64 > dists/$CODENAME/main/binary-amd64/Packages
           gzip -kf dists/$CODENAME/main/binary-amd64/Packages
-          apt-ftparchive -c ../aptftparchive.conf release dists/$CODENAME > dists/$CODENAME/Release
+          apt-ftparchive -c aptftparchive.conf release dists/$CODENAME > dists/$CODENAME/Release
 
 
           git add .
