--- a/.github/workflows/publish_deb.yml
+++ b/.github/workflows/publish_deb.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - name: Debug info
+        run: echo "Workflow run event triggered"
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -19,6 +22,9 @@ jobs:
         with:
           name: wal-g-deb
           path: ./artifacts
+
+      - name: List artifacts in directory
+        run: ls -la ./artifacts          
 
       - name: Set distribution codename and deploy
         run: |
