--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -14,8 +14,10 @@ jobs:
   release-ubuntu:
     strategy:
       matrix:
-        os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
-        db: [ pg, mongo, redis]
+        # os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
+        os: [ ubuntu-20.04 ]
+        # db: [ pg, mongo, redis]
+        db: [ pg]
       max-parallel: 2
       fail-fast: false
     runs-on: ${{ matrix.os }}
